results/SVCOMP/conversational/log-HttpSession-2024_03_13_05_42_13.txt
import java.util.Collections;
import java.util.Enumeration;
import java.util.HashMap;
import java.util.Map;

public class HttpSession {

  private final Map<String, Object> map = new HashMap<>();

  //@ requires name != null;
  //@ ensures \result == map.get(name);
  public Object getAttribute(String name) {
    return map.get(name);
  }

  //@ ensures \result != null ==> \result.hasMoreElements() && (\forall String key; \result.hasMoreElements(); map.containsKey(key));
  public Enumeration<String> getAttributeNames() {
    return Collections.enumeration(map.keySet());
  }

  //@ requires name != null;
  //@ assignable map;
  //@ ensures map.get(name) == value;
  public void setAttribute(String name, Object value) {
    this.map.put(name, value);
  }
}
/home/max/Documents/JMLGPT/tmp/HttpSession.java:11: error: An identifier with private visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == map.get(name);
                         ^
/home/max/Documents/JMLGPT/tmp/HttpSession.java:16: error: An identifier with private visibility may not be used in a ensures clause with public visibility
  //@ ensures \result != null ==> \result.hasMoreElements() && (\forall String key; \result.hasMoreElements(); map.containsKey(key));
                                                                                                               ^
/home/max/Documents/JMLGPT/tmp/HttpSession.java:22: error: An identifier with private visibility may not be used in a assignable clause with public visibility
  //@ assignable map;
                 ^
/home/max/Documents/JMLGPT/tmp/HttpSession.java:23: error: An identifier with private visibility may not be used in a ensures clause with public visibility
  //@ ensures map.get(name) == value;
              ^
4 errors

import java.util.Collections;
import java.util.Enumeration;
import java.util.HashMap;
import java.util.Map;

public class HttpSession {

  private final /*@ spec_public */ Map<String, Object> map = new HashMap<>();

  //@ requires name != null;
  //@ ensures \result == map.get(name);
  public Object getAttribute(String name) {
    return map.get(name);
  }

  //@ ensures \result != null ==> \result.hasMoreElements() && (\forall String key; \result.hasMoreElements(); map.containsKey(key));
  public Enumeration<String> getAttributeNames() {
    return Collections.enumeration(map.keySet());
  }

  //@ requires name != null;
  //@ assignable map;
  //@ ensures map.get(name) == value;
  public void setAttribute(String name, Object value) {
    this.map.put(name, value);
  }
}
